force-app/main/default/objects/SecondCMT__mdt/SecondCMT__mdt.object-meta.xml
<CustomObject>
    <label>SecondCMT</label>
    <description></description>
    <pluralLabel>SecondCMTs</pluralLabel>
</CustomObject>