force-app/main/default/objects/SecondCMT__mdt/fields/CMT_Relationship_To_newCMT__c.field-meta.xml
<CustomField>
    <fullName>CMT_Relationship_To_newCMT__c</fullName>
    <label>new CMT</label>
    <type>MetadataRelationship</type>
    <required>true</required>
    <referenceTo>new_CMT__mdt</referenceTo>
    <relationshipName>SecondCMTs</relationshipName>
    <relationshipLabel>SecondCMTs</relationshipLabel>
</CustomField>