force-app/main/default/objects/SecondCMT__mdt/fields/Field_referencing_entity__c.field-meta.xml
<CustomField>
    <fullName>Field_referencing_entity__c</fullName>
    <label>Field referencing entity</label>
    <type>MetadataRelationship</type>
    <required>true</required>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipName>SecondCMTs</relationshipName>
    <relationshipLabel>SecondCMTs</relationshipLabel>
</CustomField>