force-app/main/default/objects/SecondCMT__mdt/fields/Field_referencing_field__c.field-meta.xml
<CustomField>
    <fullName>Field_referencing_field__c</fullName>
    <label>Field referencing field</label>
    <type>MetadataRelationship</type>
    <required>true</required>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipName>SecondCMTs</relationshipName>
    <metadataRelationshipControllingField>SecondCMT__mdt.Field_referencing_entity__c</metadataRelationshipControllingField>
    <relationshipLabel>SecondCMTs</relationshipLabel>
</CustomField>