force-app/main/default/objects/SecondCMT__mdt/validationRules/ValidLabel.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidLabel</fullName>
    <active>true</active>
    <errorConditionFormula>MasterLabel = &quot;InvalidChange&quot;</errorConditionFormula>
    <errorMessage>Label name is invalid.</errorMessage>
</ValidationRule>